<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Office Crime</string>
    <string name="title_activity_crime">CrimeActivity</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_title_label">Title</string>
    <string name="crimes_title">Crimes</string>
    <string name="crime_title">Crime Title</string>
    <string name="date_picker_title">Date Picker</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="empty_list_label">There are no crimes</string>
    <string name="take">Take!</string>
    <string name="camera">camera</string>
    <string name="take_picture_label">Take Picture</string>
    <string name="image_description">Crime Image</string>    
</resources>
